--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #0f0f0f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,7 +29,7 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.6em;
   line-height: 1.1;
 }
 
@@ -69,17 +69,48 @@ button:focus-visible {
   }
 }
 
-.articles-section {
+.hero-section,
+.article-section {
   padding: 1.2em;
 }
 
+.hero-section img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+
+}
+
 .article-card {
-  background-color: #313131;
-  padding: 1.2em;
-  margin: 1.2em;
   transition: background-color 0.25s;
+  display: flex;
+  border-top: 1px solid rgb(46, 46, 46);
+  align-items: center;
+  gap: 1.2em;
+}
+
+.article-text {
+  flex: 1;
 }
 
 .article-card:hover {
   background-color: #424242;
+}
+
+.article-card:focus-within {
+  background-color: #424242;
+}
+
+.article-card .img-box {
+  flex-shrink: 0;
+  margin: auto;
+  max-width: 300px;
+  max-height: 200px;
+  overflow: hidden;
+}
+
+.article-card img {
+  width: 100%;
+  height: auto;
+  padding: 0.6em;
 }
