--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@ h1 {
   line-height: 1.1;
 }
 
+h2 {
+  font-size: 1.8em;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -69,16 +73,15 @@ button:focus-visible {
   }
 }
 
-.hero-section,
-.article-section {
-  padding: 1.2em;
-}
-
 .hero-section img {
   width: 100%;
   height: 300px;
   object-fit: cover;
+  opacity: 0.8;
+}
 
+.article-section {
+  padding: 0 1.2em;
 }
 
 .article-card {
