--- a/src/index.css
+++ b/src/index.css
@@ -1,121 +1,6 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #0f0f0f;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-}
-
-h1 {
-  font-size: 2.6em;
-  line-height: 1.1;
-}
-
-h2 {
-  font-size: 1.8em;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
-.hero-section img {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-  opacity: 0.8;
-}
-
-.article-section {
-  padding: 0 1.2em;
-}
-
-.article-card {
-  transition: background-color 0.25s;
-  display: flex;
-  border-top: 1px solid rgb(46, 46, 46);
-  align-items: center;
-  gap: 1.2em;
-}
-
-.article-text {
-  flex: 1;
-}
-
-.article-card:hover {
-  background-color: #424242;
-  cursor: pointer;
-}
-
-.article-card:focus-within {
-  background-color: #424242;
-}
-
-.article-card .img-box {
-  flex-shrink: 0;
-  margin: auto;
-  max-width: 300px;
-  max-height: 200px;
-  overflow: hidden;
-}
-
-.article-card img {
-  width: 100%;
-  height: auto;
-  padding: 0.6em;
-  border-radius: 8px;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
