--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,16 @@
   scroll-behavior: smooth;
 }
 
+html,
+body,
+#root {
+  min-height: 100vh;
+}
+
+#root {
+  @apply bg-constellation;
+}
+
 @layer components {
   .max-container {
     max-width: 1440px;
