--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,16 @@
 }
 
 html,
-body,
-#root {
-  @apply w-full h-full;
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.full {
-  @apply min-w-full min-h-full;
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .bold-drop-shadow {
@@ -39,11 +42,22 @@ body,
 }
 
 .bg-home {
-  background-image: url("/src/assets/backgrounds/endless-constellation-2.svg");
+  /* background-color: rgba(112, 128, 144, 0.866); */
+  background-image: url("/src/assets/backgrounds/parabolic-triangle-11.svg");
   background-position: center;
   background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg-page {
+  background-image: url("/src/assets/backgrounds/rose-petals.svg");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: 160%;
 }
 
 .page-width {
-  @apply max-w-[2000px] lg:w-11/12 m-auto
+  @apply max-w-[1600px] lg:w-11/12 mx-auto
 }
