--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
 
 .bg-hero {
   background-image: url("/src/assets/backgrounds/parabolic-triangle-4.svg");
-  background-size: 260%;
+  background-size: 250%;
   background-position: center;
   background-attachment: fixed;
 }
@@ -32,7 +32,10 @@ body {
 }
 
 .bold-drop-shadow {
-  box-shadow: 10px 10px 0px 10px black, -10px -10px 0px 10px slategray;
+  box-shadow: 18px 18px 0px 0px rgb(0, 0, 0);
+  border: 3px solid black;
+  transition: all 0.2s ease-in-out;
+
 }
 
 .semitransparent {
